@@ -88,6 +88,11 @@ namespace CIAO
           DDS4CCM_RETCODE (DDS::REJECTED_BY_INSTANCES_LIMIT);
           DDS4CCM_RETCODE (DDS::REJECTED_BY_SAMPLES_LIMIT);
           DDS4CCM_RETCODE (DDS::REJECTED_BY_SAMPLES_PER_INSTANCE_LIMIT);
+#if (CIAO_DDS4CCM_NDDS==1)
+          DDS4CCM_RETCODE (DDS::REJECTED_BY_REMOTE_WRITERS_LIMIT);
+          DDS4CCM_RETCODE (DDS::REJECTED_BY_REMOTE_WRITERS_PER_INSTANCE_LIMIT);
+          DDS4CCM_RETCODE (DDS::REJECTED_BY_SAMPLES_PER_REMOTE_WRITER_LIMIT);
+#endif
         }
       return "***Unknown enum value, update CIAO::DDS4CCM::translate_rejectedstatuskind()";
 #undef DDS4CCM_RETCODE
